--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "@capacitor-community/http",
-  "version": "1.4.1",
+  "version": "1.0.0",
   "description": "A native HTTP plugin for CORS-free requests and file transfers",
-  "main": "dist/plugin.cjs.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "scripts": {
     "build": "npm run clean && tsc && rollup -c rollup.config.js",
-    "ios:build": "cd ios && pod install && cd ..",
     "docs": "typedoc src/web.ts src/definitions.ts",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
     "fmt": "npm run prettier -- --write",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
-    "prepublishOnly": "npm run build && npm run ios:build",
+    "prepublishOnly": "npm run build",
     "prepare": "husky install"
   },
   "author": "Max Lynch <max@ionic.io>, Thomas Vidas <thomas@ionic.io>",
@@ -26,7 +24,6 @@
   },
   "devDependencies": {
     "@ionic/prettier-config": "^1.0.1",
-    "all-contributors-cli": "^6.20.0",
     "husky": "^6.0.0",
     "prettier": "^2.3.0",
     "prettier-plugin-java": "^1.1.1",
